--- a/www/public/css/main.css
+++ b/www/public/css/main.css
@@ -280,14 +280,24 @@ footer {
         color: #333;
     }
     .box .table-foot {
-        background: #f0f0f0;
-        border: 1px solid #eaeaea;
+        background: #f2f2f2;
+        background: -moz-linear-gradient(top,  #f2f2f2 0%, #ffffff 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f2f2f2), color-stop(100%,#ffffff));
+        background: -webkit-linear-gradient(top,  #f2f2f2 0%,#ffffff 100%);
+        background: -o-linear-gradient(top,  #f2f2f2 0%,#ffffff 100%);
+        background: -ms-linear-gradient(top,  #f2f2f2 0%,#ffffff 100%);
+        background: linear-gradient(to bottom,  #f2f2f2 0%,#ffffff 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#ffffff',GradientType=0 );
         border-radius: 0 0 4px 4px;
-        font-size: 12px;
-        line-height: 16px;
-        padding: 3px 8px 2px 8px;
-        margin: 0;
+        border-top: 1px solid #ddd;
+        font-family: 'Open Sans';
+        text-shadow: 0 1px #fff;
+        line-height: 40px;
+        font-size: 14px;
+        padding: 0 8px;
+        margin: 1px 0 0 0;
         color: #555;
+        font-weight: 700;
     }
 
     /* lists */
@@ -385,4 +395,9 @@ h3.header {
     -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
             border-radius: 5px;
+}
+
+.inside .counts {
+    margin: 0 0 10px 0;
+    color: #777;
 }
