Started adding user editor backend page.

--- a/application/views/admin/templates/sidebar.phtml
+++ b/application/views/admin/templates/sidebar.phtml
@@ -3,6 +3,7 @@
 ?>
 <div class="box inner sidebar">
     <ul>
+        <li><a href="/admin/user">Users</a></li>
         <li><a href="/admin/locale/messages">Translations</a></li>
     </ul>
 </div>
