--- a/application/views/index.phtml
+++ b/application/views/index.phtml
@@ -4,4 +4,6 @@
         Welcome to phpCore
     </div>
 
+    <div style="background: black; margin: 30px; text-align: center;"><img src="?hello" alt="" style="display: inline-block;" ></div>
+
 <?php echo $this->inc('templates/footer'); ?>
