--- a/application/views/admin/templates/sidebar.phtml
+++ b/application/views/admin/templates/sidebar.phtml
@@ -3,7 +3,10 @@
 ?>
 <div class="box inner sidebar">
     <ul>
-        <li><a href="/admin/user">Users</a></li>
+        <li><a href="/admin/users">Users</a></li>
+        <li><a href="/admin/groups">Groups</a></li>
+        <li><a href="/admin/acl/roles">ACL Roles</a></li>
+        <li><a href="/admin/acl/resources">ACL Resources</a></li>
         <li><a href="/admin/locale/messages">Translations</a></li>
     </ul>
 </div>
