Working on improving the locale admin page.

--- a/application/views/account/login.phtml
+++ b/application/views/account/login.phtml
@@ -21,7 +21,7 @@
                 "success": function(response) {
 
                     if (response.status === 'good') {
-                        location.href = "/<?php echo htmlspecialchars($this->bounce); ?>";
+                        location.href = "<?php echo htmlspecialchars($this->locale->route("/{$this->bounce}")); ?>";
                         return;
                     } else {
                         if (response.message) {
