--- a/www/public/css/CoreDialog.css
+++ b/www/public/css/CoreDialog.css
@@ -515,9 +515,11 @@
             }
 
             .CoreDialog .inner .body .prompt .field {
-                margin: 5px 0 0 0;
+                margin: 15px 0 0 0;
             }
-
+            .CoreDialog .inner .body .prompt .field:first-child {
+                margin: 0;
+            }
     /*
     * Foot
     */
