--- a/application/views/admin/templates/sidebar.phtml
+++ b/application/views/admin/templates/sidebar.phtml
@@ -7,6 +7,6 @@
         <li><a href="<?php echo $this->locale->route('/admin/groups'); ?>"><?php echo htmlspecialchars($this->locale->translate('Groups')); ?></a></li>
         <li><a href="<?php echo $this->locale->route('/admin/acl/roles'); ?>"><?php echo htmlspecialchars($this->locale->translate('ACL Roles')); ?></a></li>
         <li><a href="<?php echo $this->locale->route('/admin/acl/resources'); ?>"><?php echo htmlspecialchars($this->locale->translate('ACL Resources')); ?></a></li>
-        <li><a href="<?php echo $this->locale->route('/admin/locale/messages'); ?>"><?php echo htmlspecialchars($this->locale->translate('Translations')); ?></a></li>
+        <li><a href="<?php echo $this->locale->route('/admin/locale/namespaces'); ?>"><?php echo htmlspecialchars($this->locale->translate('Translations')); ?></a></li>
     </ul>
 </div>
